--- a/t141-css-basics/box-messages/index.html
+++ b/t141-css-basics/box-messages/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Css Box Model</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <h1>CSS Box Model</h1>
 
-    <div class="box-message">This is a info message</div>
-    <div class="box-message">This is a success message</div>
-    <div class="box-message">This is a warning</div>
-    <div class="box-message">This is a an error</div>
+    <div class="box-message info">This is a info message</div>
+    <div class="box-message success">This is a success message</div>
+    <div class="box-message warning">This is a warning</div>
+    <div class="box-message error">This is a an error</div>
 
 </body>
 </html>
